edit dishes styling to correct padding errors and image alignment

--- a/index.css
+++ b/index.css
@@ -9,9 +9,9 @@ html {
 }
 #banner {
     width: 100%;
-    height: 500px;
+    height: 400px;
     background-image: url("./assets/backgrounds/landing.jpg");
-    background-size: 100% 500px;
+    background-size: 100% 400px;
     background-repeat: no-repeat;
     border: 1px solid black;
     display: flex;
@@ -35,7 +35,41 @@ html {
     text-decoration: none;
 }
 
+@media only screen and (max-width: 480px){
+    .dishes_images {
+        flex-direction: column;
 
+    }
+    .dishes_types {
+        display: block;
+        height: auto;
+        /*flex-direction: column;*/
+    }
+
+    .dishes_type {
+        width: 100%;
+    }
+
+    .drinks_container, .fast_food {
+        display: block;
+        height: auto;
+
+    }
+    .drinks_images, .drinks_description, .fast_food_description, .fast_food_images {
+        width: 65%;
+        display: block;
+        height: auto;
+    }
+}
+
+ul {
+    list-style: none;
+}
+
+.first {
+    background: white;
+    color: rgb(130, 60, 60);
+}
 .sm-tiles{
     width: 25%;
     display: flex;
@@ -43,6 +77,7 @@ html {
     color: white;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 .sm_tiles_item {
     height: 200px;
@@ -160,44 +195,55 @@ main .fast_food, main .drinks_container {
     height: 60%;
     width: 80%;
     margin: auto;
-    background-color: rgb(223, 202, 202);
+    background-color: white;
     position: relative;
     top:100px;
 }
 .dishes_navigation{
-    background-color: rgb(210, 207, 207);
+    background-color: rgb(239, 225, 225);
     margin: 0;
+    width: 100%;
 }
 .dishes_types {
     display: flex;
-    padding: 10px;
+    width: 100%;
+    margin:0;
+    padding-left: 0;
     text-decoration: none;
+    justify-content: space-around;
 }
 .dishes_type {
-    padding: 20px 50px;
-    text-decoration: none;
+    width: 25%;
+    padding: 20px;
+    border-left: 1px solid green;
+    text-align: center;
 }
 .dishes_type:hover {
     background: white;
     color: rgb(130, 60, 60);
 }
 .dishes_images {
-    width: 200px;
-    height: 100px;
+    width: 100%;
+    height: 240px;
     display: flex;
-    margin: 0 5;
-}
-.dishes_image {
-    display: flex;
-    height: 150px;
-    width: 250px;
-    margin: 10px;
-    padding: 10px;
-    flex-direction: column;
-    justify-content: space-evenly;
     text-align: center;
+    justify-content: space-evenly;
 }
 
+
+.dishes_image {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    width: 200px;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+input[type="email"]{
+    background: rgba(250, 247, 247, 0.8);
+    border: none;
+}
 .dishes_image h4 {
     margin-top: 10px;
     color: green;
@@ -247,6 +293,8 @@ footer {
 .footer_container {
     width: 50%;
     margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .burger_foot {
@@ -269,6 +317,8 @@ footer {
     width: 40rem;
     margin: auto;
     padding: 10px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .social_link{
